--- a/dissertation/dissertation.prelim.tex
+++ b/dissertation/dissertation.prelim.tex
@@ -17,7 +17,9 @@
 
 %\dedication{}
 
-%\acknowledgments{}
+\acknowledgments{
+Regarding Chapter~\ref{ch:pt2.poisson}, I wish to thank Jacob Bedrossian and James H. von Brecht for their helpful discussions. I also wish to thank Russell Howes and Alexey Stomakhin for submitting typographical errors and providing comments on the later drafts of publication submission. This work was supported in part by NSF DMS-0502315, NSF DMS-0652427, NSF CCF-0830554, DOE 09-LR-04-116741-BERA, ONR N000140310071, and ONR N000141010730.
+}
 
 \vitaitem{2003, summer}{Research Student for Associate Professor Jon T. Jacobsen of Harvey Mudd College (Claremont, CA)}
 \vitaitem{2004, summer}{Summer Intern at Auditude$^{\text{TM}}$, Inc. (Los Angeles, CA)}
