--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -21,6 +21,8 @@
 \include{part2/part2}
 \include{part2/chapter4/chapter4}
 \include{part2/chapter5/chapter5}
+\appendix
+\include{part2/appendix}
 
 \bibliography{bib/CIM,bib/DG,bib/embedded,bib/eulerian,bib/FDM,bib/FEM_adaptive,bib/FEM_conforming,bib/FEM_nonconforming,bib/FEM_LM,bib/FVM,bib/GFM,bib/IIM,bib/KKT,bib/LE,bib/MFEM,bib/MG,bib/MIB,bib/VNA,bib/XFEM,bib/petsc,bib/quadrature,bib/SO,bib/misc}
 \bibliographystyle{uclathes}
