working on linear elasticity...

--- a/dissertation/bib/XFEM.bib
+++ b/dissertation/bib/XFEM.bib
@@ -65,7 +65,7 @@ journal={International Journal for Numerical Methods in Engineering},
 volume={51},
 number={3},
 pages={293--313},
-month={May}
+month={May},
 year={2001},
 }
 
