--- a/dissertation/dissertation.macros.tex
+++ b/dissertation/dissertation.macros.tex
@@ -17,12 +17,16 @@
 \usepackage{verbatim}
 
 \newcommand{\bbR}{\mathbb{R}}
+\newcommand{\bbZ}{\mathbb{Z}}
 
+\newcommand{\bfe}{\mathbf{e}}
 \newcommand{\bff}{\mathbf{f}}
+\newcommand{\bfg}{\mathbf{g}}
 \newcommand{\bfh}{\mathbf{h}}
 \newcommand{\bfk}{\mathbf{k}}
 \newcommand{\bfn}{\mathbf{n}}
 \newcommand{\bfu}{\mathbf{u}}
+\newcommand{\bfv}{\mathbf{v}}
 \newcommand{\bfx}{\mathbf{x}}
 \newcommand{\bfy}{\mathbf{y}}
 \newcommand{\bfH}{\mathbf{H}}
@@ -43,6 +47,7 @@
 \newcommand{\calN}{\mathcal{N}}
 \newcommand{\calO}{\mathcal{O}}
 \newcommand{\calP}{\mathcal{P}}
+\newcommand{\calT}{\mathcal{T}}
 
 \newcommand{\dOmega}{\partial\Omega}
 
