getting into multigrid...

--- a/dissertation/dissertation.macros.tex
+++ b/dissertation/dissertation.macros.tex
@@ -27,10 +27,13 @@
 \newcommand{\bfn}{\mathbf{n}}
 \newcommand{\bfu}{\mathbf{u}}
 \newcommand{\bfv}{\mathbf{v}}
+\newcommand{\bfw}{\mathbf{w}}
 \newcommand{\bfx}{\mathbf{x}}
 \newcommand{\bfy}{\mathbf{y}}
+\newcommand{\bfA}{\mathbf{A}}
 \newcommand{\bfH}{\mathbf{H}}
 \newcommand{\bfI}{\mathbf{I}}
+\newcommand{\bfM}{\mathbf{M}}
 \newcommand{\bfS}{\mathbf{S}}
 \newcommand{\bfV}{\mathbf{V}}
 
