finished multigrid section of chapter 5

--- a/dissertation/dissertation.macros.tex
+++ b/dissertation/dissertation.macros.tex
@@ -10,6 +10,7 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{appendix}
+\usepackage{color}
 \usepackage{graphicx}
 \usepackage{multicol}
 \usepackage{multirow}
@@ -73,6 +74,8 @@
 
 \DeclareMathOperator{\argmax}{argmax}
 \DeclareMathOperator{\tr}{tr}
+
+\newcommand{\plusequal}{+{}\!\!\!=}
 
 \newlength{\figureheight}
 \newlength{\figureheighti}
