getting into ch5 numerical examples...

--- a/dissertation/dissertation.macros.tex
+++ b/dissertation/dissertation.macros.tex
@@ -20,12 +20,14 @@
 \newcommand{\bbR}{\mathbb{R}}
 \newcommand{\bbZ}{\mathbb{Z}}
 
+\newcommand{\bfc}{\mathbf{c}}
 \newcommand{\bfe}{\mathbf{e}}
 \newcommand{\bff}{\mathbf{f}}
 \newcommand{\bfg}{\mathbf{g}}
 \newcommand{\bfh}{\mathbf{h}}
 \newcommand{\bfk}{\mathbf{k}}
 \newcommand{\bfn}{\mathbf{n}}
+\newcommand{\bfs}{\mathbf{s}}
 \newcommand{\bfu}{\mathbf{u}}
 \newcommand{\bfv}{\mathbf{v}}
 \newcommand{\bfw}{\mathbf{w}}
