ostensbily done with chapter 5, but will make another pass...

--- a/dissertation/part2/appendix.tex
+++ b/dissertation/part2/appendix.tex
@@ -6,7 +6,7 @@
 
 \chapter{Quadrature} \label{ch:pt2.appendix.quadrature}
 
-In \S\ref{subsec:ch4.discretization.embedding} we mention the use of Gaussian quadrature rules to compute surface integrals over triangles of polynomial integrands. For convenience, we reproduce the triangle Gaussian quadrature rules of various orders from \cite{Cowper73} in Table~\ref{tab:pt2.quadrature.rules}. For the quadrature points with multiplicity $3$, the coordinates should be permuted to give $3$ total symmetrically distributed quadrature points, all with the same given quadrature weight. For example, to integrate a cubic polynomial $p(\bfx) : \bbR^3 \to \bbR$ over a triangle $T$ with vertices $\{\bfx_1, \bfx_2, \bfx_3\} \subset \bbR^3$, one would use the order $3$ quadrature rule from Table~\ref{tab:pt2.quadrature.rules}, which manifests itself as
+In Chapter~\ref{ch:pt2.poisson}, \S\ref{subsec:ch4.discretization.embedding} we mention the use of Gaussian quadrature rules to compute surface integrals over triangles of polynomial integrands. For convenience, we reproduce the triangle Gaussian quadrature rules of various orders from \cite{Cowper73} in Table~\ref{tab:pt2.quadrature.rules}. For the quadrature points with multiplicity $3$, the coordinates should be permuted to give $3$ total symmetrically distributed quadrature points, all with the same given quadrature weight. For example, to integrate a cubic polynomial $p(\bfx) : \bbR^3 \to \bbR$ over a triangle $T$ with vertices $\{\bfx_1, \bfx_2, \bfx_3\} \subset \bbR^3$, one would use the order $3$ quadrature rule from Table~\ref{tab:pt2.quadrature.rules}, which manifests itself as
 \begin{equation} \label{eq:pt2.quadrature.example}
 \begin{split}
 \int_T p(\bfx) d\bfx = {} & \operatorname{area}(T) \left( -\frac{27}{48} \tilde{p} \lrp{\frac{1}{3}, \frac{1}{3}, \frac{1}{3}} \right. \\ & \left. {} + \frac{25}{48} \lrp{\tilde{p} \lrp{\frac{1}{5}, \frac{1}{5}, \frac{3}{5}} + \tilde{p} \lrp{\frac{1}{5}, \frac{3}{5}, \frac{1}{5}} + \tilde{p} \lrp{\frac{3}{5}, \frac{1}{5}, \frac{1}{5}}} \right),
@@ -16,7 +16,7 @@ where $\tilde{p} \lrp{\alpha_1, \alpha_2, \alpha_3} = p \lrp{\alpha_1 \bfx_1 + \
 
 \begin{table}[htbp]
 \begin{center}
-\begin{tabular}{|c|c|c|c|}
+\begin{tabular}{|@{$\,$}c@{$\,$}|@{$\,$}c@{$\,$}|c|c|}
 \hline
 order & mult. & weight & barycentric coordinates \\
 \hline\hline
@@ -45,7 +45,7 @@ $2$ & $3$ & $1/3$ & $(1/6, 1/6, 2/3)$ \\
 
 \chapter{Cell Averages} \label{ch:pt2.appendix.cellaverages}
 
-The Poisson discretizations described in \S\ref{sec:ch4.discretization} require computing cell averages $\overline{\beta}$, $\overline{f}$, and $\overline{q}$ of $\beta$, $f$, and $q$, respectively. One can use any of a variety of techniques to compute these averages, and one's choice would likely depend upon whether one has $\beta$, $f$, and $q$ immediately defined pointwise at grid vertices; pointwise at grid edge, face, or cell centers; or analytically throughout the domain, domain boundary, or interface.
+The Poisson discretizations described in Chapter~\ref{ch:pt2.poisson}, \S\ref{sec:ch4.discretization} require computing cell averages $\overline{\beta}$, $\overline{f}$, and $\overline{q}$ of $\beta$, $f$, and $q$, respectively. One can use any of a variety of techniques to compute these averages, and one's choice would likely depend upon whether one has $\beta$, $f$, and $q$ immediately defined pointwise at grid vertices; pointwise at grid edge, face, or cell centers; or analytically throughout the domain, domain boundary, or interface.
 
 We used evaluations of $\beta$ and $f$ at grid vertices to compute their cell averages. For non-boundary and non-interfacial grid cells, the cell average amounts to a straightforward, equal-weighted average of the values at the $8$ grid vertices of the cell. For boundary and interfacial grid cells, we used trilinear interpolation to compute the cell average. For example, in the domain discretizations, we compute the cell average of $\beta$ over grid cell $c_k \in \calC^h_{\dOmega}$ as
 \begin{equation*}
@@ -60,7 +60,7 @@ For embedded Neumann discretizations, to simplify implementation, we assume that
 
 \chapter{Double-Wide Constraint Conditioning} \label{ch:pt2.appendix.constraintconditioning}
 
-In the context of the constraint aggregation algorithm for the discretization of Dirichlet boundary conditions and interfacial jump conditions for Poisson's equation, as mentioned in \S\ref{subsubsec:ch4.constraintaggregation}, we found that the double-wide constraints introduced in \cite{Bedrossian10} present significant conditioning issues in $3$ dimensions that do not exist in $2$ dimensions. Table~\ref{tab:pt2.constraintconditioning} shows the condition numbers and the number of conjugate gradient solve iterations for the $Z^tAZ$ matrices resulting from the discretization of a simple Dirichlet problem and from the discretization of a similarly simple interface problem using each of two alternate discretizations $\Lambda^h$ of the Lagrange multiplier space $\Lambda$: $\Lambda^h_2$, which corresponds to the double-wide constraints; and $\Lambda^h_a$, which corresponds to the aggregate constraints constructed via the algorithm described in \S\ref{subsubsec:ch4.constraintaggregation}. We calculated these statistics using PETSc in exactly the same way as for Table~\ref{tab:ch4.examples.interface}. This includes applying Jacobi preconditioning and then solving with (incomplete Cholesky-preconditioned) conjugate gradient to a relative residual norm of $2.3 \times 10^{-13}$ of the Jacobi preconditioned system. Clearly, the conditioning of the $Z^tAZ$ system arising from the double-wide constraints is several orders of magnitude worse than that arising from the constraint aggregation algorithm described in \S\ref{subsubsec:ch4.constraintaggregation}.
+In the context of the constraint aggregation algorithm for the discretization of Dirichlet boundary conditions and interfacial jump conditions for Poisson's equation, as mentioned in Chapter~\ref{ch:pt2.poisson}, \S\ref{subsubsec:ch4.constraintaggregation}, we found that the double-wide constraints introduced in \cite{Bedrossian10} present significant conditioning issues in $3$ dimensions that do not exist in $2$ dimensions. Table~\ref{tab:pt2.constraintconditioning} shows the condition numbers and the number of conjugate gradient solve iterations for the $Z^tAZ$ matrices resulting from the discretization of a simple Dirichlet problem and from the discretization of a similarly simple interface problem using each of two alternate discretizations $\Lambda^h$ of the Lagrange multiplier space $\Lambda$: $\Lambda^h_2$, which corresponds to the double-wide constraints; and $\Lambda^h_a$, which corresponds to the aggregate constraints constructed via the algorithm described in \S\ref{subsubsec:ch4.constraintaggregation}. We calculated these statistics using PETSc in exactly the same way as for Table~\ref{tab:ch4.examples.interface}. This includes applying Jacobi preconditioning and then solving with (incomplete Cholesky-preconditioned) conjugate gradient to a relative residual norm of $2.3 \times 10^{-13}$ of the Jacobi preconditioned system. Clearly, the conditioning of the $Z^tAZ$ system arising from the double-wide constraints is several orders of magnitude worse than that arising from the constraint aggregation algorithm described in \S\ref{subsubsec:ch4.constraintaggregation}.
 
 \begin{table}[htbp]
 \begin{center}
