reordering part 1 and starting the introduction

--- a/dissertation/bib/XFEM.bib
+++ b/dissertation/bib/XFEM.bib
@@ -1,3 +1,14 @@
+@article{Belytschko99,
+author = {T. Belytschko and T. Black},
+title = {Elastic crack growth in finite elements with minimal remeshing},
+journal = {International Journal for Numerical Methods in Engineering},
+volume = {45},
+number = {5},
+pages = {601--620},
+month = {June},
+year = {1999},
+}
+
 %doi = {10.1002/(SICI)1097-0207(19990910)46:1<131::AID-NME726>3.0.CO;2-J},
 @article{Moes99,
  author = {Nicolas Mo\"{e}s and John Dolbow and Ted Belytschko},
