--- a/dissertation/introduction/introduction.tex
+++ b/dissertation/introduction/introduction.tex
@@ -1,15 +1,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% chapters/introduction.tex
+% introduction/introduction.tex
 %
 % Copyright 2012, Jeffrey Hellrung.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\part{Introduction} \label{pt:introduction}
+\part{Introduction}
 
 The simulation of a variety of physical phenomena often requires addressing frequent, and sometimes quite drastic, topological changes. Virtual surgery and fracture simulations require the dynamic introduction of one or more co-dimension one \emph{crack surfaces}, which may be completely new or may extend some crack surface introduced at a previous time step. Multiphase fluid flow and phase change problems naturally have dynamic interfaces which divide your original domain into multiple irregularly shaped subdomains. Further, any kind of shape optimization frequently changes the geometry -- and, occasionally, even the topology -- of the domain on which one must repeatedly solve some partial differential equation as a subproblem.
 
-The common thread among all the above examples is the necessity to deal with complicated and irregular geometries, whether it be crack surfaces, interfaces, or domain boundaries. A natural approach to this complexity is to use \emph{unstructured meshes} that conform to the irregular geometry of relevance \cite{Babuska70, Bramble96, Wohlmuth99, Chen.Zhiming96, Huang02, Lamichhane04, Dryja05, Cockburn09}. However, meshing complex geometries can prove difficult and, with frequent shape changes, time-consuming, especially in $3$ dimensions. In the case of shape optimization for elastic materials (\cite{Sethian00, Osher01, Allaire04, Duysinx06, Challis08, Wei.Peng08}), the task is further complicated when using the more elaborate element types seen in mixed FEM formulations, which are typically necessary for stability in the nearly incompressible regime. Furthermore, many numerical methods, such as finite differences and geometric multigrid methods, do not naturally apply to unstructured meshes.
+The common thread among all the above examples is the necessity to deal with complicated and irregular geometries, whether it be crack surfaces, interfaces, or domain boundaries. A natural approach to this complexity is to use \emph{unstructured meshes} that conform to the irregular geometry of relevance \cite{Babuska70, Bramble96, Wohlmuth99, Chen.Zhiming96, Huang02, Lamichhane04, Dryja05, Cockburn09}. However, meshing complex geometries can prove difficult and, with frequent shape changes, time-consuming, especially in $3$ dimensions. In the case of shape optimization for elastic materials (\cite{Sethian00, Osher01, Allaire04, Duysinx06, Challis08, Wei.Peng08}), the task is further complicated when using the more elaborate element types seen in mixed finite element method formulations, which are typically necessary for stability in the nearly incompressible regime. Furthermore, many numerical methods, such as finite difference methods and geometric multigrid methods, do not naturally apply to unstructured meshes.
 
 These concerns motivated the development of \emph{embedded} (or \emph{immersed}) methods, in which a structured mesh, such as a regular Cartesian grid, simply encompasses, rather than geometrically adheres or conforms to, the irregular geometry. The irregular geometry is embedded within mesh elements: its location is tracked relative to the surrounding mesh. This avoids the complexities inherent in unstructured mesh generation while opening the door to the use of efficient solution techniques such as multigrid methods. Early work on embedded methods include works of Harlow and Welch \cite{Harlow65}, Peskin \cite{Peskin72}, Hyman \cite{Hyman52}, and Saul'ev \cite{Saul'ev63}.
 
-The remainder of this text is divided into two parts. Part II investigates the application of the sophisticated mesh cutting algorithm of Sifakis et al. \cite{Sifakis07} to virtual surgery, rigid fracture for use in computer animation, and crack propagation in $2$ dimensions. All of these applications involve the embedding of some open and/or non-manifold cut or crack surface within a regular background simplex mesh, with consequent duplication of degrees of freedom. Part III discusses the solution of elliptic partial differential equations in an embedded framework. We will specifically consider Poisson's equation with interfacial jump conditions and the equilibrium equations of linear elasticity. The feature set possessed by the numerical discretization of these partial differential equations compares quite favorably with alternative methods.
+The remainder of this text is divided into two parts. Part II involves the application of the sophisticated mesh cutting algorithm of Sifakis et al. \cite{Sifakis07} to crack propagation in $2$ dimensions, virtual surgery, and rigid fracture for use in computer animation. All of these applications involve the embedding of some open and/or non-manifold cut or crack surface within a regular background simplex mesh, with consequent topology change and duplication of degrees of freedom. Part III discusses the solution of elliptic partial differential equations in an innovative embedded framework. We will specifically consider Poisson's equation with interfacial jump conditions and the equilibrium equations of linear elasticity. The feature set possessed by the described numerical methods to solve these partial differential equations has several advantages over and compares quite favorably with existing alternative methods.
