--- a/dissertation/part2/part2.tex
+++ b/dissertation/part2/part2.tex
@@ -4,7 +4,7 @@
 % Copyright 2012, Jeffrey Hellrung.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\part{Virtual Node Methods for Elliptic Problems} \label{pt:elliptic}
+\part{Virtual Node Methods for Elliptic Problems}
 
 \section*{Introduction}
 
