--- a/dissertation/part1/part1.tex
+++ b/dissertation/part1/part1.tex
@@ -1,9 +1,19 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% chapters/part1.tex
+% part1/part1.tex
 %
 % Copyright 2012, Jeffrey Hellrung.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\part{Applications of Arbitrary Lagrangian Mesh Cutting} \label{pt:meshcutting}
+\part{Applications of Arbitrary Lagrangian Mesh Cutting}
 
-[TODO]
+\section*{Introduction}
+
+Many physical simulations necessitate the modeling of fracture or crack surfaces, and in the most demanding of these simulations, these surfaces may have a highly complex non-manifold topology, i.e., with many branches and open ``fronts''. In a dynamics scenario, this may be further complicated by the frequent extension of existing crack fronts and the introduction of new failure surfaces. Applying a traditional finite element method in this context is challenging: one must either constantly regenerate the simulation mesh, which is time-consuming; or artificially and often severely limit the path and resolution of the failure surface to lie along element boundaries. Additionally, in either case, handling a high resolution fracture surface necessitates a correspondingly high resolution simulation volume, at least locally, which in turn increases the cost of solving the relevant continuum mechanics equations. Ideally, one should be able to decouple the resolution of the fracture surface (which may be highly detailed for visual effects purposes, for example; see Chapter~\ref{ch:pt1.fractureanimation}) from the resolution of the simulation mesh (which may be limited by available computational resources; see Chapter~\ref{ch:pt1.virtualsurgery}).
+
+Given the above difficulties with traditional finite element methods, Belytschko, Black, Moes99, and Dolbow \cite{Belytschko99, Moes99} developed the \emph{eXtended Finite Element Method} \linebreak[4] (XFEM). The basic idea of the XFEM is to enrich the usual finite element spaces with additional degrees of freedom which incorporate the near tip asymptotic solutions and allow the displacements around the crack surface to be discontinuous. We hold off a complete introduction to and history of the XFEM until Chapter~\ref{ch:pt1.crackpropagation}, but do mention one of the main challenges with utilizing the XFEM: automating the determination of material connectivity and subsequent enrichment of the finite element spaces. In the following chapters, we apply the mesh cutting algorithm of Sifakis et al. \cite{Sifakis07} to resolve arbitrary Lagrangian cutting surfaces against the simulation volume mesh, determine material connectivity, and automatically duplicate mesh vertices to yield \emph{virtual nodes} which effect the requisite enrichment necessary for crack separation.
+
+\section*{Mesh Cutting Algorithm Overview}
+
+As the main subject of Part II is the various applications of the mesh cutting algorithm described in Sifakis et al. \cite{Sifakis07}, we provide a brief summary of this algorithm, and refer the reader to \cite{Sifakis07} for more details. The essence of the algorithm may be described by considering the resolution of a segmented curve cutting surface against a trianglulated area as the volumetric mesh, although the following overview applies equally well to higher dimensions (as seen in Chapters~\ref{ch:pt1.virtualsurgery} and \ref{ch:pt1.fractureanimation}, for example).
+
+
