fixing my numbering issues

--- a/dissertation/dissertation.macros.tex
+++ b/dissertation/dissertation.macros.tex
@@ -4,7 +4,7 @@
 % Copyright 2012, Jeffrey Hellrung.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\usepackage{algorithm}
+\usepackage[chapter]{algorithm}
 \usepackage{algorithmic}
 \usepackage{amsmath}
 \usepackage{amssymb}
